--- a/Pandora.BackEnd.Api/packages.config
+++ b/Pandora.BackEnd.Api/packages.config
@@ -42,5 +42,7 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net462" />
   <package id="Respond" version="1.2.0" targetFramework="net462" />
+  <package id="SimpleInjector" version="4.1.1" targetFramework="net462" />
+  <package id="SimpleInjector.Integration.WebApi" version="4.1.1" targetFramework="net462" />
   <package id="WebGrease" version="1.5.2" targetFramework="net462" />
 </packages>
