--- a/Pandora.BackEnd.Business/packages.config
+++ b/Pandora.BackEnd.Business/packages.config
@@ -1,4 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="6.2.2" targetFramework="net462" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net462" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net462" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.2.1" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.2.1" targetFramework="net462" />
+  <package id="Microsoft.Owin" version="4.0.0" targetFramework="net462" />
+  <package id="Microsoft.Owin.Security" version="4.0.0" targetFramework="net462" />
+  <package id="Microsoft.Owin.Security.Cookies" version="4.0.0" targetFramework="net462" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
+  <package id="Owin" version="1.0" targetFramework="net462" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.4.403061554" targetFramework="net462" />
+  <package id="Thinktecture.IdentityModel.Core" version="1.4.0" targetFramework="net462" />
 </packages>
