--- a/Pandora.BackEnd.Api/packages.config
+++ b/Pandora.BackEnd.Api/packages.config
@@ -30,4 +30,9 @@
   <package id="Owin" version="1.0" targetFramework="net462" />
   <package id="SimpleInjector" version="4.1.1" targetFramework="net462" />
   <package id="SimpleInjector.Integration.WebApi" version="4.1.1" targetFramework="net462" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net462" />
 </packages>
