OAuth security integrated

--- a/Pandora.BackEnd.Api/Web.config
+++ b/Pandora.BackEnd.Api/Web.config
@@ -12,7 +12,12 @@
     <add name="DebugConnection" connectionString="Data Source=.;Initial Catalog=PandoraExampleDB;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="ReleaseConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=PandoraExampleDB;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="emailService:Account" value="" />
+    <add key="emailService:Password" value="" />
+    <add key="as:AudienceId" value="414e1927a3884f68abc79f7283837fd1" />
+    <add key="as:AudienceSecret" value="IxrAjDoa2FqElO7IhrSrUJELhUckePEPVpaePlS_Xaw" />
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.2" />
@@ -85,6 +90,14 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Cors" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.IdentityModel.Tokens.Jwt" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.40306.1554" newVersion="4.0.40306.1554" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
