--- a/Pandora.BackEnd.Api/packages.config
+++ b/Pandora.BackEnd.Api/packages.config
@@ -1,11 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.4" targetFramework="net462" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net462" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net462" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net462" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net462" />
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net462" />
+  <package id="Microsoft.AspNet.SignalR" version="2.2.3" targetFramework="net462" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.3" targetFramework="net462" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.4" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net462" />
@@ -18,21 +22,24 @@
   <package id="Microsoft.IdentityModel.Tokens" version="5.2.1" targetFramework="net462" />
   <package id="Microsoft.Net.Compilers" version="2.7.0" targetFramework="net462" developmentDependency="true" />
   <package id="Microsoft.Owin" version="4.0.0" targetFramework="net462" />
+  <package id="Microsoft.Owin.Cors" version="4.0.0" targetFramework="net462" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net462" />
   <package id="Microsoft.Owin.Security" version="4.0.0" targetFramework="net462" />
   <package id="Microsoft.Owin.Security.Cookies" version="4.0.0" targetFramework="net462" />
   <package id="Microsoft.Owin.Security.Facebook" version="4.0.0" targetFramework="net462" />
   <package id="Microsoft.Owin.Security.Google" version="4.0.0" targetFramework="net462" />
+  <package id="Microsoft.Owin.Security.Jwt" version="3.1.0" targetFramework="net462" />
   <package id="Microsoft.Owin.Security.MicrosoftAccount" version="4.0.0" targetFramework="net462" />
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net462" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net462" />
-  <package id="SimpleInjector" version="4.1.1" targetFramework="net462" />
-  <package id="SimpleInjector.Integration.WebApi" version="4.1.1" targetFramework="net462" />
+  <package id="SimpleInjector" version="4.2.1" targetFramework="net462" />
+  <package id="SimpleInjector.Integration.WebApi" version="4.2.1" targetFramework="net462" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.4.403061554" targetFramework="net462" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net462" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
 </packages>
