AccountController and EmailService added and some relocation

--- a/Pandora.BackEnd.Common/app.config
+++ b/Pandora.BackEnd.Common/app.config
@@ -12,4 +12,10 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <appSettings>
+    <add key="emailService:Account" value="" />
+    <add key="emailService:Password" value="" />
+    <add key="emailService:Address" value="info@pandorasistemas.com" />
+    <add key="emailService:Fromm" value="Pandora Sistemas" />
+  </appSettings>
 </configuration>
