--- a/Pandora.BackEnd.Business/Pandora.BackEnd.Business.csproj
+++ b/Pandora.BackEnd.Business/Pandora.BackEnd.Business.csproj
@@ -79,6 +79,7 @@
     <Reference Include="System.IdentityModel.Tokens.Jwt, Version=4.0.40306.1554, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\System.IdentityModel.Tokens.Jwt.4.0.4.403061554\lib\net45\System.IdentityModel.Tokens.Jwt.dll</HintPath>
     </Reference>
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -94,7 +95,6 @@
     <Compile Include="Concrets\EmployeeSVC.cs" />
     <Compile Include="Concrets\ServicesBase.cs" />
     <Compile Include="Contracts\IEmployeeSVC.cs" />
-    <Compile Include="DRO\.DTOConfig.cs" />
     <Compile Include="DTO\EmployeeDTO.cs" />
     <Compile Include="Filters\.PagedFilter.cs" />
     <Compile Include="Filters\EmployeeFilter.cs" />
@@ -109,7 +109,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DTO\.DTOConfig.cs" />
+    <Compile Include="AutoMapperConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Pandora.BackEnd.Common\Pandora.BackEnd.Common.csproj">
