--- a/Pandora.BackEnd.Common/packages.config
+++ b/Pandora.BackEnd.Common/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net462" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
   <package id="Sendgrid" version="5.1.0" targetFramework="net462" />
   <package id="SendGrid.SmtpApi" version="1.2.1" targetFramework="net462" />
