Decoupling projects and structure improvement

--- a/Pandora.BackEnd.Common/app.config
+++ b/Pandora.BackEnd.Common/app.config
@@ -18,7 +18,7 @@
   </runtime>
   <appSettings>
     <add key="emailService:Account" value="info@pandorasistemas.com" />
-    <add key="emailService:Password" value="" />
+    <add key="emailService:Password" value="Pandora.18" />
     <add key="emailService:Address" value="info@pandorasistemas.com" />
     <add key="emailService:Fromm" value="Pandora Sistemas" />
   </appSettings>
