--- a/Pandora.BackEnd.Data/packages.config
+++ b/Pandora.BackEnd.Data/packages.config
@@ -10,4 +10,9 @@
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net462" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
 </packages>
