--- a/Pandora.BackEnd.Reports/packages.config
+++ b/Pandora.BackEnd.Reports/packages.config
@@ -2,4 +2,9 @@
 <packages>
   <package id="AutoMapper" version="6.2.2" targetFramework="net462" />
   <package id="Microsoft.Report.Viewer" version="11.0.0.0" targetFramework="net462" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
 </packages>
