--- a/Pandora.BackEnd.Api/packages.config
+++ b/Pandora.BackEnd.Api/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="6.2.2" targetFramework="net462" />
+  <package id="elmah" version="1.2.2" targetFramework="net462" />
+  <package id="elmah.corelibrary" version="1.2.2" targetFramework="net462" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
   <package id="Microsoft.AspNet.Cors" version="5.2.4" targetFramework="net462" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net462" />
