--- a/Pandora.BackEnd.Business/Pandora.BackEnd.Business.csproj
+++ b/Pandora.BackEnd.Business/Pandora.BackEnd.Business.csproj
@@ -72,6 +72,9 @@
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
+    <Reference Include="SimpleInjector, Version=4.2.1.0, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
+      <HintPath>..\packages\SimpleInjector.4.2.1\lib\net45\SimpleInjector.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -108,6 +111,8 @@
     <Compile Include="BLResponse.cs" />
     <Compile Include="Concrets\EmployeeSVC.cs" />
     <Compile Include="Concrets\ServicesBase.cs" />
+    <Compile Include="Config\AccountManagerConfig.cs" />
+    <Compile Include="Config\BusinessMapperProfile.cs" />
     <Compile Include="Contracts\IEmployeeSVC.cs" />
     <Compile Include="DTO\EmployeeDTO.cs" />
     <Compile Include="Filters\.PagedFilter.cs" />
@@ -117,14 +122,11 @@
     <Compile Include="Providers\CustomOAuthProvider.cs" />
     <Compile Include="Providers\ExtendedClaimsProvider.cs" />
     <Compile Include="Providers\TokenRefreshProvider.cs" />
-    <Compile Include="DTO\Report\EmployeeDRO.cs" />
+    <Compile Include="Config\SimpleInjectorBusinessConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AutoMapperConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Pandora.BackEnd.Common\Pandora.BackEnd.Common.csproj">
