--- a/Pandora.BackEnd.Business/packages.config
+++ b/Pandora.BackEnd.Business/packages.config
@@ -13,6 +13,7 @@
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net462" />
+  <package id="SimpleInjector" version="4.2.1" targetFramework="net462" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.4.403061554" targetFramework="net462" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net462" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" />
